# libglvnd

./: .editorconfig  .gitignore  .gitlab-ci.yml  .travis.yml  10-x11glvnd.conf  Makefile.am  README.md  autogen.sh  configure.ac  dbg_configure.sh  libglvnd.pc.in  meson.build  meson_options.txt
.gitlab-ci/: i686-linux-gnu  run_build.sh  run_distcheck.sh  run_meson.sh  ubuntu_install.sh
doc/: GLX_EXT_libglvnd.txt
include/: Makefile.am  compiler.h  glheader.h  glvnd_list.h  lkdhash.h  meson.build
include/EGL/: egl.h  eglext.h
include/GL/: gl.h
include/GLES3/: gl3ext.h
include/HGL/: README
include/HGL/opengl/: GLView.h
include/glvnd/: GLdispatchABI.h  libeglabi.h  libglxabi.h
include/main/: glheader.h
src/: Makefile.am  meson.build
src/EGL/: Makefile.am  egl-symbol-check.sh  egl.pc.in  egl.symbols  egldispatchstubs.c  egldispatchstubs.h  icd_enumeration.md  libegl.c  libeglabipriv.h  libeglcurrent.c  libeglcurrent.h  libeglerror.c  libeglerror.h  libeglmapping.c  libeglmapping.h  libeglvendor.c  libeglvendor.h  meson.build
src/GL/: .gitignore  GL.c  Makefile.am  TODO  gl-symbol-check.sh  gl.pc.in  gl.symbols  libgl.c  libgl.h  meson.build
src/GLESv1/: .gitignore  Makefile.am  glesv1-symbol-check.sh  glesv1.symbols  glesv1_cm.pc.in  meson.build
src/GLESv2/: .gitignore  Makefile.am  glesv2-symbol-check.sh  glesv2.pc.in  glesv2.symbols  meson.build
src/GLX/: .gitignore  Makefile.am  TODO  gen_glx_stubs.py  gen_stubs.pl  glvnd_genentry.c  glvnd_genentry.h  glx-symbol-check.sh  glx.pc.in  glx.symbols  glx_funcs.spec  libglx.c  libglx_function_list.py  libglxabi.h  libglxabipriv.h  libglxcurrent.h  libglxgl.h  libglxgldispatch.c  libglxgldispatch.h  libglxmapping.c  libglxmapping.h  libglxnoop.c  libglxnoop.h  libglxnoopdefs.h  libglxproto.c  libglxproto.h  libglxstring.c  libglxstring.h  libglxthread.h  meson.build
src/GLdispatch/: GLdispatch.c  GLdispatch.h  GLdispatchABI.h  GLdispatchPrivate.h  Makefile.am  export_list.sym  export_list_tls.ver  export_list_tsd.ver  meson.build
src/GLdispatch/mapi/: Makefile.sources  entry.c  mapi_abi.py  mapi_glapi.c  u_current.c
src/GLdispatch/mapi/es1api/: Makefile.am
src/GLdispatch/mapi/es2api/: Makefile.am
src/GLdispatch/mapi/glapi/: Makefile.sources  glapi.h  glapi_entrypoint.c
src/GLdispatch/mapi/glapi/tests/: Makefile.am
src/GLdispatch/mapi/vnd-glapi/: Makefile.am
src/GLdispatch/vnd-glapi/: .gitignore  Makefile.am  entry.h  entry_aarch64_tsd.c  entry_armv7_tsd.c  entry_common.c  entry_common.h  entry_files.mk  entry_loongarch64_tsd.c  entry_ppc64_tls.c  entry_ppc64_tsd.c  entry_ppc64le_tls.c  entry_ppc64le_tsd.c  entry_pure_c.c  entry_simple_asm.c  entry_x86_64_common.c  entry_x86_64_tls.c  entry_x86_64_tsd.c  entry_x86_tls.c  entry_x86_tsd.c  glapi.h  mapi_glapi.c  mapi_tmp.h  meson.build  stub.c  stub.h  table.c  table.h  u_current.h  u_current_tls.c  u_execmem.c
src/GLdispatch/vnd-glapi/mapi/: Makefile.am  entry.c  entry.h  entry_armv7_tsd.c  entry_armv7_tsd.h  entry_common.c  entry_common.h  entry_pure_c.c  entry_pure_c.h  entry_x86-64_tls.h  entry_x86-64_tsd.h  entry_x86_64_common.c  entry_x86_64_tls.c  entry_x86_64_tsd.c  entry_x86_tls.c  entry_x86_tls.h  entry_x86_tsd.c  entry_x86_tsd.h  entryhelpers.c  entryhelpers.h  mapi_abi.py  mapi_glapi.c  stub.c  stub.h  table.h  u_current.c  u_current.h  u_current_tls.c  u_current_tsd.c  u_execmem.c  u_execmem.h  u_thread.h
src/GLdispatch/vnd-glapi/mapi/glapi/: Makefile.am  glapi.c  glapi.h  glapi_priv.h
src/GLdispatch/vnd-glapi/mapi/shared-glapi/: Makefile.am
src/GLdispatch/vnd-glapi/mapi/shared-glapi/tests/: Makefile.am
src/GLdispatch/vnd-glapi/mapi/vgapi/: Makefile.am
src/HGL/: BitmapHook.h  GLView.cpp  libgl.c  meson.build
src/OpenGL/: .gitignore  Makefile.am  OpenGL.c  TODO  entrypoint_common.mk  libopengl.c  meson.build  ogl-symbol-check.sh  ogl.symbols  opengl.pc.in
src/arch/x86/: Makefile.am
src/arch/x86-64/: Makefile.am
src/generate/: eglFunctionList.py  genCommon.py  gen_egl_dispatch.py  gen_gldispatch_mapi.py  gen_libOpenGL_exports.py  gen_libgl_glxstubs.py  gl_inittable.py  gl_table.py  glvnd_gen.mk  meson.build
src/generate/xml/: egl.xml  gl_other.xml  glx_other.xml
src/util/: Makefile.am  app_error_check.c  app_error_check.h  cJSON.c  glvnd_genentry.c  glvnd_genentry.h  glvnd_pthread.c  glvnd_pthread.h  meson.build  trace.c  trace.h  utils_misc.c  utils_misc.h  winsys_dispatch.c  winsys_dispatch.h
src/util/glvnd_pthread/: Makefile.am  glvnd_pthread.c  glvnd_pthread.h
src/util/trace/: Makefile.am  trace.c
src/util/uthash/doc/: ChangeLog.html  userguide.html  utarray.html  utlist.html  utstring.html
src/util/uthash/src/: uthash.h
src/util/uthash/tests/: test74.c  test75.c  test76.c  test77.c
src/x11glvnd/: Makefile.am  x11glvnd.h  x11glvndclient.c  x11glvndproto.h  x11glvndserver.c  x11glvndserver.h
tests/: .gitignore  Makefile.am  egl_test_utils.c  egl_test_utils.h  eglenv.sh  fini_test_env.sh  glxenv.sh  init_test_env.sh  meson.build  test_utils.c  test_utils.h  testeglcurrentcleanup.c  testeglcurrentcleanup.sh  testegldebug.c  testegldebug.sh  testegldevice.c  testegldevice.sh  testegldeviceadd.c  testegldeviceadd_querydevices.sh  testegldeviceadd_querydisplay.sh  testegldeviceadd_returndevice.sh  testegldisplay.c  testegldisplay.sh  testeglerror.c  testeglerror.sh  testeglgetprocaddress.c  testeglgetprocaddress.sh  testeglmakecurrent.c  testeglmakecurrent.sh  testgldispatch.c  testgldispatch_generated.sh  testgldispatch_generated_thr.sh  testgldispatch_patched.sh  testgldispatch_patched_thr.sh  testgldispatch_static.sh  testgldispatch_static_thr.sh  testgldispatchthread.c  testgldispatchthread.sh  testglxcreatecontext.c  testglxcreatecontext.sh  (+25 more)
tests/GLX_dummy/: GLX_dummy.c  GLX_dummy.h  Makefile.am  README
tests/dummy/: EGL_dummy.c  EGL_dummy.h  GLX_dummy.c  GLX_dummy.h  Makefile.am  meson.build  patchentrypoints.c  patchentrypoints.h
tests/json/: 10_egldummy0.json  20_egldummy1.json
