
nobase_include_HEADERS = \
	glvnd/GLdispatchABI.h \
	glvnd/libglxabi.h \
	glvnd/libeglabi.h

noinst_HEADERS = \
	c99_compat.h \
	compiler.h \
	glheader.h \
	glvnd_list.h \
	lkdhash.h \
	EGL/egl.h \
	EGL/eglext.h \
	EGL/eglplatform.h \
	GL/gl.h \
	GL/glext.h \
	GL/glx.h \
	GL/glxext.h \
	GLES/egl.h \
	GLES/gl.h \
	GLES/glext.h \
	GLES/glplatform.h \
	KHR/khrplatform.h

